force-app/main/default/objects/Account/fields/Class_8_Non_KW__c.field-meta.xml
<CustomField>
    <fullName>Class_8_Non_KW__c</fullName>
    <label>Class 8: Non KW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>