force-app/main/default/objects/Account/fields/Class_8_Oil_Coolant__c.field-meta.xml
<CustomField>
    <fullName>Class_8_Oil_Coolant__c</fullName>
    <formula>Class_8_Total__c *594</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation is based on number of Class: 8 Trucks x $594</inlineHelpText>
    <label>Class 8: Oil-Coolant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>