force-app/main/default/objects/Account/fields/Code_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Code_Dealer_Name__c</fullName>
    <formula>Dealer_Code__c +&quot;  -   &quot;+ SMART_Dealer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code &amp; Dealer Name</label>
    <type>Text</type>
</CustomField>