force-app/main/default/objects/Account/fields/Company_Owned_Repair_Shop__c.field-meta.xml
<CustomField>
    <fullName>Company_Owned_Repair_Shop__c</fullName>
    <label>Company Owned Repair Shop</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>