force-app/main/default/objects/Account/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors Purchasing From</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volvo/Mack</fullName>
            </value>
            <value>
                <fullName>Freightliner</fullName>
            </value>
            <value>
                <fullName>International/Navistar</fullName>
            </value>
            <value>
                <fullName>WDs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>