force-app/main/default/objects/Account/fields/Connect_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Connect_Account_Code__c</fullName>
    <description>Cxxxx Connect Code</description>
    <inlineHelpText>Cxxxx Connect Code</inlineHelpText>
    <label>Connect Account Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>