force-app/main/default/objects/Account/fields/Connect_Accounting_Integration__c.field-meta.xml
<CustomField>
    <fullName>Connect_Accounting_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connect Accounting Integration</label>
    <type>Checkbox</type>
</CustomField>