force-app/main/default/objects/Account/fields/Connect_Corporate_Code__c.field-meta.xml
<CustomField>
    <fullName>Connect_Corporate_Code__c</fullName>
    <label>Connect Corporate Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>