force-app/main/default/objects/Account/fields/Connect_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Connect_Dealer_Code__c</fullName>
    <formula>Sponsoring_Dealership__r.Dealer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connect Dealer Code</label>
    <type>Text</type>
</CustomField>