force-app/main/default/objects/Account/fields/Connect_Dealer_Group__c.field-meta.xml
<CustomField>
    <fullName>Connect_Dealer_Group__c</fullName>
    <formula>Sponsoring_Dealership__r.Group_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connect Dealer Group</label>
    <type>Text</type>
</CustomField>