force-app/main/default/objects/Account/fields/Connect_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Connect_Dealer_Name__c</fullName>
    <formula>Sponsoring_Dealership__r.SMART_Dealer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connect Dealer Name</label>
    <type>Text</type>
</CustomField>