force-app/main/default/objects/Account/fields/Connect_Division__c.field-meta.xml
<CustomField>
    <fullName>Connect_Division__c</fullName>
    <formula>TEXT (Sponsoring_Dealership__r.PACCARDivision__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connect Division</label>
    <type>Text</type>
</CustomField>