force-app/main/default/objects/Account/fields/Connect_Modules__c.field-meta.xml
<CustomField>
    <fullName>Connect_Modules__c</fullName>
    <label>Connect Modules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Export Module</fullName>
            </value>
            <value>
                <fullName>Counter Sales Module</fullName>
            </value>
            <value>
                <fullName>Fuel Tracking Module</fullName>
            </value>
            <value>
                <fullName>Inland Ordering System</fullName>
            </value>
            <value>
                <fullName>McLeod Integration Module</fullName>
            </value>
            <value>
                <fullName>Mileage Import Module</fullName>
            </value>
            <value>
                <fullName>Tire Tracking Module</fullName>
            </value>
            <value>
                <fullName>WO History Export Module</fullName>
            </value>
            <value>
                <fullName>WO Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>