force-app/main/default/objects/Account/fields/Connect_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Connect_Sales_Manager__c</fullName>
    <label>eCommerce Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Devon Graff</fullName>
                <label>DEVON GRAFF</label>
            </value>
            <value>
                <fullName>Ray Hider</fullName>
                <label>RAY HIDER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>