force-app/main/default/objects/Account/fields/Connect_Status__c.field-meta.xml
<CustomField>
    <fullName>Connect_Status__c</fullName>
    <label>Connect Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BBT SENT TO PERFIT</fullName>
            </value>
            <value>
                <fullName>BBT FAILED</fullName>
            </value>
            <value>
                <fullName>WAITING ON ADDENDUM</fullName>
            </value>
            <value>
                <fullName>WAITING ON USER AGREEMENT</fullName>
            </value>
            <value>
                <fullName>COLLECTING DATA FROM CUSTOMER</fullName>
            </value>
            <value>
                <fullName>SYSTEM ORDER SENT TO PERFIT</fullName>
            </value>
            <value>
                <fullName>IMPLEMENTATION IN PROCESS</fullName>
            </value>
            <value>
                <fullName>PENDING-CUSTOMER</fullName>
            </value>
            <value>
                <fullName>PENDING-PACCAR</fullName>
            </value>
            <value>
                <fullName>IMPLEMENTED</fullName>
            </value>
            <value>
                <fullName>LOST-REASSIGNED</fullName>
            </value>
            <value>
                <fullName>LOST-RETURNED</fullName>
            </value>
            <value>
                <fullName>ABANDONED</fullName>
            </value>
            <value>
                <fullName>INLAND ORDERING SYSTEM</fullName>
            </value>
            <value>
                <fullName>RETRAINING IN PROCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>