force-app/main/default/objects/Account/fields/Connect_Support_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Connect_Support_Per_Month__c</fullName>
    <label>Connect Support Per Month</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>