force-app/main/default/objects/Account/fields/Connect_Tech__c.field-meta.xml
<CustomField>
    <fullName>Connect_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this Customer has the Connect Tech KONA Module?</inlineHelpText>
    <label>Connect Tech</label>
    <type>Checkbox</type>
</CustomField>