force-app/main/default/objects/Account/fields/Connect_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Connect_Trainer__c</fullName>
    <label>Trainer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cinthia Yepez</fullName>
                <color>#FF6666</color>
                <label>Cinthia Yepez</label>
            </value>
            <value>
                <fullName>Sarah Kultgen</fullName>
                <color>#33CCFF</color>
                <label>Sarah Kultgen</label>
            </value>
            <value>
                <fullName>Xin Xin</fullName>
                <color>#FF99FF</color>
                <label>Xin Xin</label>
            </value>
            <value>
                <fullName>Jorge Mendoza</fullName>
                <color>#78C953</color>
                <label>Jorge Mendoza</label>
            </value>
            <value>
                <fullName>Jarrett Garrison</fullName>
                <color>#0B6FCE</color>
                <label>Jarrett Garrison</label>
            </value>
            <value>
                <fullName>Meredith Piro</fullName>
            </value>
            <value>
                <fullName>Terri Wierlo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>