force-app/main/default/objects/Account/fields/Contact_for_a_Split_Trailer_Load__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_a_Split_Trailer_Load__c</fullName>
    <description>Would this dealer group be interested in being contacted for a split trailer load?</description>
    <label>Contact for a Split Trailer Load</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>