force-app/main/default/objects/Account/fields/Credit_Level__c.field-meta.xml
<CustomField>
    <fullName>Credit_Level__c</fullName>
    <label>Credit Level</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>