force-app/main/default/objects/Account/fields/Current_of_Outside_Sales_Staff__c.field-meta.xml
<CustomField>
    <fullName>Current_of_Outside_Sales_Staff__c</fullName>
    <label>Current # of Outside Sales Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>