force-app/main/default/objects/Account/fields/Current_of_Registered_Fleets_Dlr_Grp__c.field-meta.xml
<CustomField>
    <fullName>Current_of_Registered_Fleets_Dlr_Grp__c</fullName>
    <label>Current # of Registered Fleets(Dlr.Grp)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>