force-app/main/default/objects/Account/fields/CurrentAccountingPackage__c.field-meta.xml
<CustomField>
    <fullName>CurrentAccountingPackage__c</fullName>
    <label>Current Accounting Package</label>
    <length>30</length>
    <type>Text</type>
</CustomField>