force-app/main/default/objects/Account/fields/CurrentInventoryShopSystem__c.field-meta.xml
<CustomField>
    <fullName>CurrentInventoryShopSystem__c</fullName>
    <label>Current Inventory/Shop System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aurora</fullName>
            </value>
            <value>
                <fullName>Conexion Profesional</fullName>
            </value>
            <value>
                <fullName>Connect Enterprise</fullName>
            </value>
            <value>
                <fullName>Connect Express</fullName>
            </value>
            <value>
                <fullName>Connect Professional</fullName>
            </value>
            <value>
                <fullName>Connect Pro Inventory + Equipment</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>Dossier - Arsenault</fullName>
            </value>
            <value>
                <fullName>Enrich</fullName>
            </value>
            <value>
                <fullName>EPAC</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Extra Fleet 2000</fullName>
            </value>
            <value>
                <fullName>Fleet Assist</fullName>
            </value>
            <value>
                <fullName>Halbersem</fullName>
            </value>
            <value>
                <fullName>Halberstat</fullName>
            </value>
            <value>
                <fullName>Home grown system</fullName>
            </value>
            <value>
                <fullName>Innovative</fullName>
            </value>
            <value>
                <fullName>International - Diamond Connect / RIS</fullName>
            </value>
            <value>
                <fullName>International - Diamond Connections / Truck Tracker</fullName>
            </value>
            <value>
                <fullName>JJ Keller&apos;s Maintenance Manager</fullName>
            </value>
            <value>
                <fullName>Karmak Profitmaker</fullName>
            </value>
            <value>
                <fullName>Maddox</fullName>
            </value>
            <value>
                <fullName>Manual / Paper</fullName>
            </value>
            <value>
                <fullName>Milton</fullName>
            </value>
            <value>
                <fullName>NAPA TRACS</fullName>
            </value>
            <value>
                <fullName>No system</fullName>
            </value>
            <value>
                <fullName>Old DOS</fullName>
            </value>
            <value>
                <fullName>Parts2000</fullName>
            </value>
            <value>
                <fullName>Powerpro</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>