force-app/main/default/objects/Account/fields/Customer_Center__c.field-meta.xml
<CustomField>
    <fullName>Customer_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is cistomer using Customer Center</description>
    <label>Kenworth Customer Center</label>
    <type>Checkbox</type>
</CustomField>