force-app/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>Unique identifier for national accounts</description>
    <inlineHelpText>Unique identifier for national accounts</inlineHelpText>
    <label>Customer Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>