force-app/main/default/objects/Account/fields/Customer_PO_Required__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Required__c</fullName>
    <label>Customer PO Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>