force-app/main/default/objects/Account/fields/CY_OSS__c.field-meta.xml
<CustomField>
    <fullName>CY_OSS__c</fullName>
    <label>CY-OSS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>