force-app/main/default/objects/Account/fields/CY_Ventas_2Qtr__c.field-meta.xml
<CustomField>
    <fullName>CY_Ventas_2Qtr__c</fullName>
    <label>CY Ventas 2Qtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>