force-app/main/default/objects/Account/fields/CY_Ventas_3Qtr__c.field-meta.xml
<CustomField>
    <fullName>CY_Ventas_3Qtr__c</fullName>
    <label>CY Ventas 3Qtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>