force-app/main/default/objects/Account/fields/Daily_NA_Goal__c.field-meta.xml
<CustomField>
    <fullName>Daily_NA_Goal__c</fullName>
    <formula>Percentage_of_Year_Passed__c  * 63500000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily NA Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>