force-app/main/default/objects/Account/fields/Daily_Run_Rate_Goal__c.field-meta.xml
<CustomField>
    <fullName>Daily_Run_Rate_Goal__c</fullName>
    <formula>( ICGoal_Sales__c /253)*1.06</formula>
    <label>Daily Run Rate Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>