force-app/main/default/objects/Account/fields/DataMigrationID__c.field-meta.xml
<CustomField>
    <fullName>DataMigrationID__c</fullName>
    <description>ID from the Group Org, used for data migration only</description>
    <label>DataMigrationID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>