force-app/main/default/objects/Account/fields/Date_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoiced__c</fullName>
    <description>Date Invoiced for Support</description>
    <label>Date Invoiced</label>
    <type>Date</type>
</CustomField>