force-app/main/default/objects/Account/fields/Days_Since_January_1__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_January_1__c</fullName>
    <formula>ABS(Date(2017,1,1) -Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since January 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>