force-app/main/default/objects/Account/fields/DBA_Store_Number__c.field-meta.xml
<CustomField>
    <fullName>DBA_Store_Number__c</fullName>
    <label>DBA Store Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>