force-app/main/default/objects/Account/fields/Dcode__c.field-meta.xml
<CustomField>
    <fullName>Dcode__c</fullName>
    <description>Onvia: Client dealer code</description>
    <inlineHelpText>Onvia: Client dealer code</inlineHelpText>
    <label>Dcode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>