force-app/main/default/objects/Account/fields/Dealer_Action_Notification__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Action_Notification__c</fullName>
    <description>This email is maintained by Field Service teams to give the dealer another alert for all Technical assistant cases.</description>
    <inlineHelpText>This field is maintained by Field Service teams.</inlineHelpText>
    <label>Dealer Action Notification</label>
    <type>Email</type>
</CustomField>