force-app/main/default/objects/Account/fields/Dealer_Alias__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Alias__c</fullName>
    <label>Dealer Alias</label>
    <length>18</length>
    <type>Text</type>
</CustomField>