force-app/main/default/objects/Account/fields/Dealer_Code_Issued__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code_Issued__c</fullName>
    <label>Dealer Code Issued</label>
    <type>Date</type>
</CustomField>