force-app/main/default/objects/Account/fields/Dealer_DBS__c.field-meta.xml
<CustomField>
    <fullName>Dealer_DBS__c</fullName>
    <label>Dealer DBS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADP/CDK</fullName>
            </value>
            <value>
                <fullName>AS400</fullName>
            </value>
            <value>
                <fullName>CAT Custom</fullName>
            </value>
            <value>
                <fullName>DP Solutions Vibe</fullName>
            </value>
            <value>
                <fullName>DSI</fullName>
            </value>
            <value>
                <fullName>Karmak Fusion</fullName>
            </value>
            <value>
                <fullName>Karmak Info5</fullName>
            </value>
            <value>
                <fullName>Karmak Legend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Procede</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Serti</fullName>
            </value>
            <value>
                <fullName>Sitic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>