force-app/main/default/objects/Account/fields/Dealer_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Group_Code__c</fullName>
    <label>Dealer Group Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>