force-app/main/default/objects/Account/fields/Dealer_Group_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Group_Code_Name__c</fullName>
    <formula>Group_Code__c  + &quot; &quot; + Dealer_Group_Name__c</formula>
    <label>Group &amp; Code</label>
    <type>Text</type>
</CustomField>