force-app/main/default/objects/Account/fields/Dealer_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Group_Name__c</fullName>
    <label>Dealer Group Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>