force-app/main/default/objects/Account/fields/Dealer_ISP_PPFS_ID__c.field-meta.xml
<CustomField>
    <fullName>Dealer_ISP_PPFS_ID__c</fullName>
    <label>Dealer ISP PPFS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>