force-app/main/default/objects/Account/fields/Dealer_Personnel_Responsible_KW__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Personnel_Responsible_KW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Personnel  Responsible KW</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Dealer_Code__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.Deactivated__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Dealer Personnel  Responsible KW)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>