force-app/main/default/objects/Account/fields/Dealer_Personnel_Responsible_PB__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Personnel_Responsible_PB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Personnel Responsible PB</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Dealer Personnel Responsible PB)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>