force-app/main/default/objects/Account/fields/Dealer_Principal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Principal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field is used by Roadside</description>
    <label>Dealer Principal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Dealer Principal Contact)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>