force-app/main/default/objects/Account/fields/Dealer_Private_Label__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Private_Label__c</fullName>
    <label>Dealer Private Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>