force-app/main/default/objects/Account/fields/Dealer_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Suffix__c</fullName>
    <label>Dealer Suffix</label>
    <length>12</length>
    <type>Text</type>
</CustomField>