force-app/main/default/objects/Account/fields/Decisiv__c.field-meta.xml
<CustomField>
    <fullName>Decisiv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decisiv</label>
    <type>Checkbox</type>
</CustomField>