force-app/main/default/objects/Account/fields/Decisive__c.field-meta.xml
<CustomField>
    <fullName>Decisive__c</fullName>
    <description>Does the dealership utilize Decisive.</description>
    <label>Decisive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>