force-app/main/default/objects/Account/fields/Dedicated_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Fleet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks if the Account is a dedicated fleet managed by DFS</description>
    <inlineHelpText>Managed by the DFS team</inlineHelpText>
    <label>Dedicated Fleet</label>
    <type>Checkbox</type>
</CustomField>