force-app/main/default/objects/Account/fields/Delivery_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Drivers__c</fullName>
    <label># Delivery Drivers</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>