force-app/main/default/objects/Account/fields/DFM__c.field-meta.xml
<CustomField>
    <fullName>DFM__c</fullName>
    <label>DFM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BENITEZ,G.</fullName>
            </value>
            <value>
                <fullName>HERRERA,M.</fullName>
            </value>
            <value>
                <fullName>JIMENEZ,A.</fullName>
            </value>
            <value>
                <fullName>NEGRETE, F.</fullName>
            </value>
            <value>
                <fullName>MORENO,A.</fullName>
            </value>
            <value>
                <fullName>GONZALEZ, A.</fullName>
            </value>
            <value>
                <fullName>VIESCA,R.</fullName>
            </value>
            <value>
                <fullName>CALACICH.L.</fullName>
            </value>
            <value>
                <fullName>CLARIGUE, J.</fullName>
            </value>
            <value>
                <fullName>GUZMAN, J.</fullName>
            </value>
            <value>
                <fullName>FLORES, JM.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>