force-app/main/default/objects/Account/fields/DFS_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>DFS_Add_Date__c</fullName>
    <inlineHelpText>Date added to DFS (or estimated to be added)</inlineHelpText>
    <label>DFS Add Date</label>
    <type>Date</type>
</CustomField>