force-app/main/default/objects/Account/fields/DFS_Contact__c.field-meta.xml
<CustomField>
    <fullName>DFS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DFS Contact for the Fleet</description>
    <label>DFS Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fleets</relationshipName>
    <type>Lookup</type>
</CustomField>