force-app/main/default/objects/Account/fields/Dispatch_System__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_System__c</fullName>
    <label>Dispatch System</label>
    <length>250</length>
    <type>Text</type>
</CustomField>