force-app/main/default/objects/Account/fields/District_Brands__c.field-meta.xml
<CustomField>
    <fullName>District_Brands__c</fullName>
    <description>Paccar Brands District</description>
    <inlineHelpText>Paccar Brands District</inlineHelpText>
    <label>District (Brands)</label>
    <length>12</length>
    <type>Text</type>
</CustomField>